--- a/views/login.html
+++ b/views/login.html
@@ -4,32 +4,52 @@
 <!--[if IE 8]> <html class="lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html lang="en"> <!--<![endif]-->
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Login</title>
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/creative.min.css" rel="stylesheet">
-  <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
-
-  <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Login</title>
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-auth.js"></script>
 </head>
+
 <body style="overflow-x: hidden; overflow-y: hidden;">
-  <h1 class="register-title">Login</h1>
-  <form class="register">
-    <input type="email" class="register-input" id="email" placeholder="Email address">
-    <input type="password" class="register-input" id="password" placeholder="Password">
-    <p id="error"></p>
-    <a href="/profile"><button type="button" onclick="login()" value="Login" class="register-button">Sign In</button></a>
-    <p style = "margin-top:20px; text-align: center">Don't have an account? <a href = "/register">Sign Up!</a></p>
-  </form>
-  <script>
+    <h1 class="login-title">Login</h1>
+    <form class="login">
+        <input type="email" class="register-input" id="email" placeholder="Email address">
+        <input type="password" class="register-input" id="password" placeholder="Password">
+        <p id="error"></p>
+        <a href="/profile"><button type="button" onclick="login()" value="Login" class="register-button">Sign In</button></a>
+        <p style = "margin-top:20px; text-align: center">Don't have an account? <a href = "/register">Sign Up!</a></p>
+    </form>
+    <a href="/profile" id="link" style="display:none"> </a>
 
+    <script>
+        var config = {
+            apiKey: "AIzaSyBljIAXQPP9f9FJ9LTHuVlZJZkpajvmZj4",
+            authDomain: "yodelbackend.firebaseapp.com",
+            databaseURL: "https://yodelbackend.firebaseio.com",
+            storageBucket: "yodelbackend.appspot.com",
+            messagingSenderId: "609174959546"
+        };
+        firebase.initializeApp(config);
 
-  // function getName(authData) {
-    // return authData.password.email.replace(/@.*/, '');
-  // }
+        function login(){
+            loginUser(function(){linkUser});
+        }
+        function linkUser(){
+            var user = firebase.auth().currentUser();
 
-  </script>
+            if (user) {
+                window.location = document.getElementById('link').href;
+            }
+        }
+        function loginUser(callback){
+            firebase.auth().signInWithEmailAndPassword(email, password).catch(function(error) {
+                document.getElementById("error").innerHTML = error.message;           
+            });
+        }
+    </script>
 
 </body>
 </html>
