--- a/views/create.html
+++ b/views/create.html
@@ -6,24 +6,21 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Login</title>
+    <title>New Project</title>
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-database.js"></script>
 </head>
 
-<body style="overflow-x: hidden; overflow-y: hidden;">
-    <h1 class="login-title">Login</h1>
+<body>
     <form class="login">
         <input type="email" class="register-input" id="email" placeholder="Email address">
         <input type="password" class="register-input" id="password" placeholder="Password">
         <p id="error"></p>
-        <button type="button" onclick="login()">Sign In</button>
-
-        <p style = "margin-top:20px;">Don't have an account? <a href = "/register">Sign Up!</a></p>
+        <button type="button" onclick="create()" value="Login" class="register-button">Create</button>
     </form>
-    <a href="/profile" id="link" style="display:none"> </a>
 
     <script>
         var config = {
@@ -33,20 +30,32 @@
             storageBucket: "yodelbackend.appspot.com",
             messagingSenderId: "609174959546"
         };
+
         firebase.initializeApp(config);
 
-        function login(){
-            firebase.auth().signInWithEmailAndPassword(document.getElementById("email").value, document.getElementById("password").value).then(function(){ 
-                    var user = firebase.auth().currentUser;
+        function create(){
+            var user = firebase.auth().currentUser();
 
-                    if (user) {
-                        console.log('hello 4')
-                        window.location = document.getElementById('link').href;
-                    }
-            }).catch(function(error) {
-                document.getElementById("error").innerHTML = error.message;           
-            });
+            if (user) {
+                var array = new Array();
+
+                if(user.project != null){
+                    array = user.projects;
+                }
+                
+                array.push(document.getElementById("projectName").value);
+
+                user.updateProfile({
+                    projects: array,
+                }).then(function() {
+                    window.location = document.getElementById('link').href;
+                }, function(error) {
+                    console.log(error.message);
+                    document.getElementById("error").innerHTML = error.message;
+                });
+            }
         }
+
     </script>
 
 </body>
