--- a/views/profile.html
+++ b/views/profile.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <label id="username"></label>
+    <label id="username"></label><br>
     <button><a href="/createProject"> New Project</a></button>
     <table>
 
@@ -42,7 +42,17 @@
             firebase.database().ref('/users/' + userId).once('value').then(function(snapshot) {
                 console.log(snapshot.val())
                 var username = snapshot.val().username;
-                document.getElementById("username").value = username
+                console.log(username)
+                document.getElementById("username").innerHTML = username
+            });
+
+            firebase.database().ref('/projects').once('value').then(function(snapshot) {
+                for (var x=0; x<= snapshot.val().count; x++){
+                    console.log('hi')
+                }
+                var username = snapshot.val().username;
+                console.log(username)
+                document.getElementById("username").innerHTML = username
             });
         } else {
             // No user is signed in.
