--- a/views/profile.html
+++ b/views/profile.html
@@ -18,7 +18,16 @@
 <body>
     <label id="username"></label><br>
     <button><a href="/createProject"> New Project</a></button>
-    <table>
+    <form class="search">
+        <input type="text" class="register-input" id="category" placeholder="Category">
+        <input type="text" class="register-input" id="search" placeholder="Search">
+        <input tpye="text" class="register-input" id="location" placeholder="Location">
+        <p id="error"></p>
+        <button type="button" onclick="search()">Search</button>
+
+        <p style = "margin-top:20px;">Don't have an account? <a href = "/register">Sign Up!</a></p>
+    </form>
+    <table id="projectsTable">
 
     </table>
 
@@ -45,23 +54,49 @@
                 console.log(username)
                 document.getElementById("username").innerHTML = username
             });
+        } else {
+            // No user is signed in.
+            }
+        });
 
+        function search(){
             firebase.database().ref('/projects').once('value').then(function(snapshot) {
                 console.log(snapshot.val());
                 if(snapshot.val() != null){
-                    for (var x=0; x<= snapshot.numChildren(); x++){
-                        console.log('hi')
+                    if(category != ""){
+                        for (var x=0; x < snapshot.numChildren(); x++){
+                            if(snapshot.val()["x"]["category"] == document.getElementById("category").value)  {
+
+                                var table = document.getElementById("projectsTable");
+                                var row = table.insertRow(0);
+
+                                var cell1 = row.insertCell(0);
+                                var cell2 = row.insertCell(1);
+                                var cell3 = row.insertCell(2);
+                                var cell4 = row.insertCell(3);
+                                var cell5 = row.insertCell(4);
+                                cell1.innerHTML = snapshot.val()["x"][""];
+                            }
+                        }
                     }
+                    // for (var x=0; x < snapshot.numChildren(); x++){
+                    //     var table = document.getElementById("projectsTable");
+                    //     var row = table.insertRow(0);
+
+                    //     var cell1 = row.insertCell(0);
+                    //     var cell2 = row.insertCell(1);
+                    //     var cell3 = row.insertCell(2);
+                    //     var cell4 = row.insertCell(3);
+                    //     var cell5 = row.insertCell(4);
+
+                    //     cell1.innerHTML = "NEW CELL1";
+                    // }
                 }
                 else{
                     console.log("no projects yet");
                 }
             });
-
-        } else {
-            // No user is signed in.
-            }
-        });
+        }
     </script>
 
 </body>
