category search works

--- a/views/create.html
+++ b/views/create.html
@@ -25,10 +25,10 @@
         <input type="text" class="register-input" id="location" placeholder="location"><br>
         <input type="number" class="register-input" id="lowestBid" placeholder="lowestBid"><br>
         <p id="error"></p>
-        <button type="button" onclick="create()" value="Login" class="register-button">Create</button>
-        <a style="display:none" href="/profile" id="link"></a>
-        <a style="display:none" href="/login" id="notLoggedIn"></a>
+        <button type="button" onclick="create()" value="Create" class="register-button">Create</button>
     </form>
+    <a style="display:none" href="/profile" id="link"></a>
+    <a style="display:none" href="/login" id="notLoggedIn"></a>
 
     <script>
         var config = {
