--- a/views/profile.html
+++ b/views/profile.html
@@ -25,18 +25,29 @@ table{
 <body>
     <label id="username"></label><br>
     <button><a href="/createProject"> New Project</a></button>
-    <form class="search">
-        <input type="text" class="register-input" id="category" placeholder="Category">
-        <input type="text" class="register-input" id="search" placeholder="Search">
-        <input tpye="text" class="register-input" id="location" placeholder="Location">
-        <p id="error"></p>
-        <button type="button" onclick="searchProjects()" value="search" class="register-button">search</button>
-    </form>
-    <p style = "margin-top:20px;">Don't have an account? <a href = "/register">Sign Up!</a></p>
 
+    <p style = "margin-top:20px;">Don't have an account? <a href = "/register">Sign Up!</a></p>
+    <label> Your Projects</label><br>
+    <table id="yourTable" border="1"></table>
+    <br><br>
+
+    <label> Projects </label><br>
     <table id="projectsTable" border="1">
     </table>
 
+    <form class="search">
+        <input type="text" class="register-input" id="searchProject" placeholder="search">
+        <select id="searchType">
+            <option value="name">Name</option>
+            <option value="category" selected>Category</option>
+            <option value="location">Location</option>
+        </select>
+        <!-- <input type="text" class="register-input" id="search" placeholder="Search"> -->
+        <!-- <input tpye="text" class="register-input" id="location" placeholder="Location"> -->
+        <p id="error"></p>
+        <button type="button" onclick="searchProjects()" value="search" class="register-button">search</button>
+        <option></option>
+    </form>
     <a href="/login" id="notLoggedIn" style="display:none"> </a>
 
     <script>
@@ -51,28 +62,93 @@ table{
 
         firebase.auth().onAuthStateChanged(function(user) {
             if (user) {
-                var userId = firebase.auth().currentUser.uid;
+                userId = firebase.auth().currentUser.uid;
                 firebase.database().ref('/users/' + userId).once('value').then(function(snapshot) {
                     var username = snapshot.val()["username"];
                     document.getElementById("username").innerHTML = username
+                });
+
+                var userKeys = [];
+                var query2 = firebase.database().ref("users/" + userId + '/projects').orderByKey();
+                query2.once("value")
+                .then(function(snapshot) {
+                    snapshot.forEach(function(childSnapshot) {
+                        var key = childSnapshot.key;
+                        console.log(key)
+                        userKeys.push(key);
+                    });
+
+                    firebase.database().ref('/users/' + userId + '/projects').once('value').then(function(snapshot) {
+
+                        for (var x=0; x < snapshot.numChildren(); x++){
+                            console.log(snapshot.val()[userKeys[x]][searchType]);
+
+                            var table = document.getElementById("yourTable");
+
+                            var row = table.insertRow(0);
+                            var cell1 = row.insertCell(0);
+                            var cell2 = row.insertCell(1);
+                            var cell3 = row.insertCell(2);
+                            var cell4 = row.insertCell(3);
+                            var cell5 = row.insertCell(4);
+                            var cell6 = row.insertCell(5);
+
+                            cell1.innerHTML = snapshot.val()[userKeys[x]]["name"]
+                            cell2.innerHTML = snapshot.val()[userKeys[x]]["category"]
+                            cell3.innerHTML = snapshot.val()[userKeys[x]]["location"]
+                            cell4.innerHTML = snapshot.val()[userKeys[x]]["service"];
+                            cell5.innerHTML = snapshot.val()[userKeys[x]]["lowestBid"]
+                            cell6.innerHTML = snapshot.val()[userKeys[x]]["description"]
+                        }
+                    });
                 });
             } 
             else {
                 window.location = document.getElementById("notLoggedIn").href
             }
         });
+        var keys = [];
+        var searchType = document.getElementById("searchType").value
 
+        var query = firebase.database().ref("projects").orderByKey();
+        query.once("value")
+        .then(function(snapshot) {
+            snapshot.forEach(function(childSnapshot) {
+                var key = childSnapshot.key;
+                console.log(key)
+                keys.push(key);
+            });
+
+            firebase.database().ref('/projects').once('value').then(function(snapshot) {
+                for (var x=0; x < snapshot.numChildren(); x++){
+                    var table = document.getElementById("projectsTable");
+
+                    var row = table.insertRow(0);
+                    var cell1 = row.insertCell(0);
+                    var cell2 = row.insertCell(1);
+                    var cell3 = row.insertCell(2);
+                    var cell4 = row.insertCell(3);
+                    var cell5 = row.insertCell(4);
+                    var cell6 = row.insertCell(5);
+
+                    cell1.innerHTML = snapshot.val()[keys[x]]["name"]
+                    cell2.innerHTML = snapshot.val()[keys[x]]["category"]
+                    cell3.innerHTML = snapshot.val()[keys[x]]["location"]
+                    cell4.innerHTML = snapshot.val()[keys[x]]["service"];
+                    cell5.innerHTML = snapshot.val()[keys[x]]["lowestBid"]
+                    cell6.innerHTML = snapshot.val()[keys[x]]["description"]
+                }
+            });
+        });
 
         function searchProjects(){
             var keys = [];
+            var searchType = document.getElementById("searchType").value
+            var table = document.getElementById('projectsTable');
 
-            // var elmtTable = document.getElementById('projectsTable');
-            // var tableRows = elmtTable.getElementsByTagName('tr');
-            //     var rowCount = tableRows.length;
-
-            //     for (var x=rowCount-1; x>0; x--) {
-            //        elmtTable.removeChild(tableRows[x]);
-            // }
+            while(table.rows.length > 0) {
+                table.deleteRow(0);
+            }   
 
             var query = firebase.database().ref("projects").orderByKey();
             query.once("value")
@@ -82,11 +158,12 @@ table{
                     console.log(key)
                     keys.push(key);
                 });
-                firebase.database().ref('/projects').once('value').then(function(snapshot) {
+
+                firebase.database().ref('/users/' + userId + '/projects').once('value').then(function(snapshot) {
                 for (var x=0; x < snapshot.numChildren(); x++){
-                    console.log(snapshot.val()[keys[x]]["category"]);
-                    console.log(document.getElementById("category").value)
-                    if(snapshot.val()[keys[x]]["category"] == document.getElementById("category").value)  {
+                    console.log(snapshot.val()[keys[x]][searchType]);
+                    // console.log(document.getElementById("category").value)
+                    if(snapshot.val()[keys[x]][searchType] == document.getElementById("searchProject").value)  {
 
                         var table = document.getElementById("projectsTable");
 
@@ -110,7 +187,6 @@ table{
             });
         }
 
-        // var arrayData  = []
     </script>
 
 </body>
